# 24sevenfm_covers

./: .gitignore  24sevencovers.aps  24sevencovers.cpp  24sevencovers.rc  24sevencovers.sln  24sevencovers.vcxproj  24sevencovers.vcxproj.filters  24sevenfm_covers.rc  24sevenfm_covers.sln  24sevenfm_covers.vcxproj  24sevenfm_covers.vcxproj.filters  LICENSE  README.md  Resource.h  SECURITY.md  viewer_resource.h  viewer_version.h
.githooks/: post-commit
.github/workflows/: deploy-site.yml  release.yml  test.yml
24sevencovers/x64/Debug/: 24sevencovers.exe.recipe  24sevencovers.res  vc145.idb
24sevencovers/x64/Debug/24sevencovers.tlog/: 24sevencovers.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
demo/: demo.txt
desktop/: 24sevenfm_covers.cpp  24sevenfm_covers.manifest  24sevenfm_covers.rc  24sevenfm_covers.vcxproj  24sevenfm_covers.vcxproj.filters  viewer_resource.h  viewer_version.h
foobar2000/: wtl.props
foobar2000/foo_24sevencover/: albumart.cpp  foo_24sevencover.rc  foo_24sevencover.vcxproj  foobar_settings.cpp  foobar_settings.h  main.cpp  preferences.cpp  ui_element.cpp
foobar2000/foo_24sevenfm_covers/: albumart.cpp  foo_24sevenfm_covers.rc  foo_24sevenfm_covers.vcxproj  foo_version.h  foobar_settings.cpp  foobar_settings.h  main.cpp  playback.cpp  preferences.cpp  ui_element.cpp
foobar2000/wtl/: MS-PL.txt  README.txt
installer/: README.md  build_artifacts.ps1  foobar_24sevenfm_covers.nsi  installer_common.nsh  readme-foobar.txt  readme-viewer.txt  readme-winamp.txt  render_site.ps1  viewer_24sevenfm_covers.nsi  winamp_24sevencover.nsi  winamp_24sevenfm_covers.nsi
lib/: CMakeLists.txt  README.md  coverfetch.cpp  coverfetch.h  coverfetch_c.cpp  coverfetch_c.h  http_client.cpp  http_client.h
lib/example/: main.cpp
lib/tests/: test_coverfetch.cpp
shared/: config.h  config_store.h  cover_engine.cpp  cover_engine.h  cover_menu.cpp  cover_menu.h  d2d_renderer.cpp  d2d_renderer.h  d2d_rolldigits.cpp  d2d_rolldigits.h  d2d_transitions.cpp  d2d_transitions.h  demo.cpp  demo.h  fullscreen.h  fullscreen_window.cpp  fullscreen_window.h  image_limits.h  options_ids.h  options_page.rc  options_panel.cpp  options_panel.h  stations.h  version.h  window_rect.h
site/: README.md  code-signing.html  index.html  privacy.html  robots.txt  shoot.ps1  sitemap.xml
site/css/: style.css
vlc/: 00_24sevenfm.lua  README.md
winamp/: CMakeLists.txt  README.md  d2d_rolldigits.cpp  d2d_transitions.cpp  gen.h  gen_24sevencover.cpp  gen_24sevencover.rc  gen_24sevenfm_covers.cpp  gen_24sevenfm_covers.rc  gen_resource.h  gen_version.h
www/: README.md  index.html  shoot.ps1
www/css/: style.css
